--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </header>
 
   <main class="gallery">
-    <img src="foto1.jpg" alt="Foto 1" onclick="openLightbox(0)">
+    <img src="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(0)">
     <img src="foto2.jpg" alt="Foto 2" onclick="openLightbox(1)">
     <img src="foto3.jpg" alt="Foto 3" onclick="openLightbox(2)">
   </main>
@@ -81,7 +81,7 @@
   </div>
 
   <script>
-    const images = ['foto1.jpg', 'foto2.jpg', 'foto3.jpg'];
+    const images = ['IMG_1106-Bearbeitet.jpg', 'foto2.jpg', 'foto3.jpg'];
     let current = 0;
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
