--- a/index.html
+++ b/index.html
@@ -4,34 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thomas Barton – Fotogalerie</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f4f4f4;
+      font-family: 'Open Sans', sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
     }
     header {
-      background-color: #222;
-      color: white;
-      padding: 2rem;
+      background-color: white;
+      padding: 4rem 1rem 2rem;
       text-align: center;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      margin: 0;
+      color: #111;
+    }
+    header p {
+      font-size: 1.2rem;
+      color: #666;
+      margin-top: 0.5rem;
     }
     .gallery {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem 1rem;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-      padding: 2rem;
+      gap: 2rem;
     }
     .gallery img {
       width: 100%;
       height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
       cursor: pointer;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      transition: transform 0.2s;
     }
     .gallery img:hover {
-      transform: scale(1.02);
+      transform: scale(1.01);
     }
     .lightbox {
       display: none;
@@ -65,7 +79,7 @@
 <body>
 
   <header>
-    <h1>Thomas Barton</h1>
+    <h1>Thomas R. Barton</h1>
     <p>Fotograf aus Frankfurt am Main</p>
   </header>
 
