--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <main class="gallery">
     <img src="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(0)">
-    <img src="foto2.jpg" alt="Foto 2" onclick="openLightbox(1)">
+    <img src="IMG_3512.jpg" alt="Foto 2" onclick="openLightbox(1)">
     <img src="foto3.jpg" alt="Foto 3" onclick="openLightbox(2)">
   </main>
 
