--- a/impressum.html
+++ b/impressum.html
@@ -22,12 +22,12 @@
   <p>Angaben gemäß § 5 TMG:</p>
   <p>
     Thomas R. Barton<br>
-    Frankfurt am Main<br>
+    60388 Frankfurt am Main<br>
     Deutschland
   </p>
 
   <p><strong>Kontakt:</strong><br>
-  E-Mail: <a href="mailto:dein.email@example.com">dein.email@example.com</a></p>
+  E-Mail: <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a></p>
 
   <p>Dies ist eine private, nicht-kommerzielle Website zur Präsentation persönlicher Fotografien.</p>
 </body>
