--- a/index.html
+++ b/index.html
@@ -131,28 +131,29 @@
     }
   </script>
 <footer>
-    <p>
-      <a href="impressum.html">Impressum</a> | 
-      <a href="datenschutz.html">Datenschutzerklärung</a>
-    </p>
-  </footer>
+  <p>
+    <a href="impressum.html" target="_blank" rel="noopener noreferrer">Impressum</a> | 
+    <a href="datenschutz.html" target="_blank" rel="noopener noreferrer">Datenschutzerklärung</a>
+  </p>
+</footer>
 
-  <style>
-    footer {
-      background-color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-      box-shadow: 0 -1px 4px rgba(0,0,0,0.05);
-      font-size: 0.9rem;
-      color: #555;
-    }
-    footer a {
-      color: #333;
-      text-decoration: none;
-      margin: 0 0.5rem;
-    }
-    footer a:hover {
-      text-decoration: underline;
+<style>
+  footer {
+    background-color: white;
+    padding: 2rem 1rem;
+    text-align: center;
+    box-shadow: 0 -1px 4px rgba(0,0,0,0.05);
+    font-size: 0.9rem;
+    color: #555;
+  }
+  footer a {
+    color: #333;
+    text-decoration: none;
+    margin: 0 0.5rem;
+  }
+  footer a:hover {
+    text-decoration: underline;
+ 
     }
   </style>
 </body>
