--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
 
   <script>
-    const images = ['IMG_1106-Bearbeitet.jpg', 'foto2.jpg', 'foto3.jpg'];
+    const images = ['IMG_1106-Bearbeitet.jpg', 'IMG_3512.jpg', 'kaleidoscope-by-thomas-barton.jpg'];
     let current = 0;
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
