--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
+    .logo {
+      width: 180px;
+      max-width: 100%;
+      margin-bottom: 1rem;
+    }
+
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
@@ -111,6 +117,7 @@
 <body>
 
   <header>
+    <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
     <h1>Thomas R. Barton</h1>
     <p>Fotograf aus Frankfurt am Main</p>
   </header>
@@ -161,9 +168,9 @@
     function touchMove(e) {
       let touchX = e.touches[0].clientX;
       if (startX - touchX > 50) {
-        // Swipe left (optional)
+        // swipe left
       } else if (touchX - startX > 50) {
-        // Swipe right (optional)
+        // swipe right
       }
     }
 
