--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     }
 
     .logo {
-      width: 180px;
-      max-width: 100%;
+      height: 90px; /* 50% kleiner */
+  max-width: 100%;
       margin-bottom: 1rem;
     }
 
@@ -113,14 +113,37 @@
     footer a:hover {
       text-decoration: underline;
     }
+    .header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.header-text {
+  text-align: left;
+}
+
+@media (max-width: 600px) {
+  .header-container {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
   </style>
 </head>
 <body>
 
   <header>
+    <div class="header-container">
     <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
-    <h1>Thomas R. Barton</h1>
-    <p>Fotograf aus Frankfurt am Main</p>
+    <div class="header-text">
+      <h1>Thomas R. Barton</h1>
+      <p>Fotograf aus Frankfurt am Main</p>
+    </div>
+  </div>
   </header>
 
   <main class="gallery">
