--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   </header>
 
   <main class="gallery">
-    <img src="thumb1_IMG_1106-Bearbeitet" data-full="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(this)" />
+    <img src="thumb1.jpg" data-full="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(this)" />
     <img src="thumb2.jpg" data-full="IMG_3512.jpg" alt="Foto 2" onclick="openLightbox(this)" />
     <img src="thumb3.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" onclick="openLightbox(this)" />
     <img src="thumb4.jpg" data-full="original4.jpg" alt="Foto 4" onclick="openLightbox(this)" />
