--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thomas R. Barton – Fotogalerie</title>
+  <title>Barton Photogaraphy</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
@@ -140,8 +140,8 @@
     <div class="header-container">
     <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
     <div class="header-text">
-      <h1>Thomas R. Barton</h1>
-      <p>Fotograf aus Frankfurt am Main</p>
+      <h1>Barton Photogaraphy</h1>
+      <p>Thomas R. Barton - Photographer based in Frankfurt/Main</p>
     </div>
   </div>
   </header>
