--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
     <div class="header-text">
       <h1>Barton Photogaraphy</h1>
-      <p>Thomas R. Barton - Photographer based in Frankfurt/Main</p>
+      <p>Thomas R. Barton - Photographer based in Frankfurt</p>
     </div>
   </div>
   </header>
