--- a/impressum.html
+++ b/impressum.html
@@ -29,6 +29,6 @@
   <p><strong>Kontakt:</strong><br>
   E-Mail: <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a></p>
 
-  <p>Dies ist eine private, nicht-kommerzielle Website zur Präsentation persönlicher Fotografien.</p>
+  <p>All photos published on www.thomas-barton.de are protected by copyright. Any use by persons other than the copyright holder is strictly prohibited.</p>
 </body>
 </html>
