Update and rename impressum.html to imprint.html

--- a/imprint.html
+++ b/imprint.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Impressum</title>
+  <title>Imprint</title>
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
@@ -18,8 +18,8 @@
   </style>
 </head>
 <body>
-  <h1>Impressum</h1>
-  <p>Angaben gemäß § 5 TMG:</p>
+  <h1>Imprint</h1>
+  <p>Information pursuant to Section 5 of the German Telemedia Act (TMG)::</p>
   <p>
     Thomas R. Barton<br>
     60388 Frankfurt am Main<br>
