--- a/imprint.html
+++ b/imprint.html
@@ -23,7 +23,7 @@
   <p>
     Thomas R. Barton<br>
     60388 Frankfurt am Main<br>
-    Deutschland
+    Germany
   </p>
 
   <p><strong>Kontakt:</strong><br>
