--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <footer>
     <p>
-      <a href="impressum.html" target="_blank" rel="noopener noreferrer">Impressum</a> |
+      <a href="imprint.html" target="_blank" rel="noopener noreferrer">Imprint</a> |
       <a href="datenschutz.html" target="_blank" rel="noopener noreferrer">Datenschutzerklärung</a>
     </p>
   </footer>
