--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <footer>
     <p>
       <a href="imprint.html" target="_blank" rel="noopener noreferrer">Imprint</a> |
-      <a href="datenschutz.html" target="_blank" rel="noopener noreferrer">Datenschutzerklärung</a>
+      <a href="privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
     </p>
   </footer>
 
