--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
 
   <p>No cookies are set, and no tracking services are used.</p>
 
-  <p>If you have any questions regarding data protection, you can contact me at:<br>
+  <p>If you have any questions regarding data protection, you can contact me at:
   <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a></p>
 </body>
 </html>
