--- a/imprint.html
+++ b/imprint.html
@@ -26,7 +26,7 @@
     Germany
   </p>
 
-  <p><strong>Kontakt:</strong><br>
+  <p><strong>Contact:</strong><br>
   E-Mail: <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a></p>
 
   <p>All photos published on www.thomas-barton.de are protected by copyright. Any use by persons other than the copyright holder is strictly prohibited.</p>
