--- a/privacy.html
+++ b/privacy.html
@@ -99,8 +99,8 @@
 
   <footer>
     <p>
-      <a href="impressum.html" target="_blank" rel="noopener noreferrer">Impressum</a> |
-      <a href="datenschutz.html" target="_blank" rel="noopener noreferrer">Datenschutzerklärung</a>
+      <a href="index.html" target="_blank" rel="noopener noreferrer">Home</a> |
+
     </p>
   </footer>
 
