--- a/privacy.html
+++ b/privacy.html
@@ -94,12 +94,12 @@
     <p>No cookies are set, and no tracking services are used.</p>
 
     <p>If you have any questions regarding data protection, you can contact me at:<br>
-    <a href="mailto:info@thomas-barton.de">info@thomas-barton.de</a></p>
+    <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a></p>
   </main>
 
   <footer>
     <p>
-      <a href="index.html" target="_blank" rel="noopener noreferrer">Home</a> |
+      <a href="index.html" target="_blank" rel="noopener noreferrer">Home</a>
 
     </p>
   </footer>
