--- a/imprint.html
+++ b/imprint.html
@@ -105,7 +105,7 @@
 
   <footer>
     <p>
-      <a href="index.html" target="_blank" rel="noopener noreferrer">Home</a>
+      <a href="index.html">Home</a>
       
     </p>
   </footer>
