--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Datenschutzerklärung – Thomas R. Barton</title>
+  <title>Privacy Policy – Barton Photography</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -99,7 +99,7 @@
 
   <footer>
     <p>
-      <a href="index.html" target="_blank" rel="noopener noreferrer">Home</a>
+      <a href="index.html">Home</a>
 
     </p>
   </footer>
