--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
   <footer>
     <p>
-      <a href="imprint.html" target="_blank" rel="noopener noreferrer">Imprint</a> |
-      <a href="privacy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+      <a href="imprint.html">Imprint</a> 
+      <a href="privacy.html">Privacy Policy</a>
     </p>
   </footer>
 
