--- a/imprint.html
+++ b/imprint.html
@@ -82,17 +82,17 @@
       <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
       <div class="header-text">
         <h1>Thomas R. Barton</h1>
-        <p>Fotograf aus Frankfurt am Main</p>
+        <p>Photographer based in Frankfurt</p>
       </div>
     </div>
   </header>
 
   <main>
-    <h2>Impressum</h2>
+    <h2>Imprint</h2>
     <p>Information pursuant to Section 5 of the German Telemedia Act (TMG):</p>
     <p>
       Thomas R. Barton<br />
-      60388 Frankfurt am Main<br />
+      60388 Frankfurt<br />
       Germany
     </p>
 
