--- a/index.html
+++ b/index.html
@@ -64,36 +64,40 @@
     }
 
     .lightbox {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      align-items: center;
-      justify-content: center;
-    }
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
 
-    .lightbox.active {
-      display: flex;
-    }
+.lightbox.active {
+  display: flex;
+}
 
-    .lightbox img {
-      max-width: 90%;
-      max-height: 80%;
-      border-radius: 10px;
-    }
+.lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  background: white;
+  padding: 0.5rem;
+}
 
-    .close-btn {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      color: white;
-      font-size: 30px;
-      cursor: pointer;
-    }
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  color: #333;
+  font-size: 30px;
+  cursor: pointer;
+}
+
 
     footer {
       background-color: white;
