--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
 .close-btn {
   position: absolute;
   top: 20px;
-  right: 30px;
+  right: 60px; /* weiter rein, damit es nicht vom Scrollbalken verdeckt wird */
   color: #333;
   font-size: 30px;
   cursor: pointer;
+  z-index: 1001;
 }
 
 
