--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barton Photogaraphy</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Open+Sans&display=swap" rel="stylesheet" />
+  
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
+    
+    @font-face {
+  font-family: 'Open Sans';
+  src: url('fonts/open-sans-v40-latin-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Playfair Display';
+  src: url('fonts/playfair-display-v37-latin-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
@@ -138,6 +153,8 @@
 }
 
   </style>
+
+
 </head>
 <body>
 
