--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 
   <main class="gallery">
     <img src="thumb1.jpg" data-full="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(this)" />
-    <img src="thumb2.jpg" data-full="IMG_3512.jpg" alt="Foto 2" onclick="openLightbox(this)" />
-    <img src="thumb3.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" onclick="openLightbox(this)" />
+    <img src="thumb_IMG_3512.jpg" data-full="IMG_3512.jpg" alt="Foto 2" onclick="openLightbox(this)" />
+    <img src="thumb_kaleidoscope-by-thomas-barton.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" onclick="openLightbox(this)" />
     <img src="thumb-skyline.jpg" data-full="lightbox-skyline.jpg" alt="Foto 4" onclick="openLightbox(this)" />
     <img src="thumb5.jpg" data-full="original5.jpg" alt="Foto 5" onclick="openLightbox(this)" />
     <img src="thumb6.jpg" data-full="original6.jpg" alt="Foto 6" onclick="openLightbox(this)" />
