--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Barton Photogaraphy</title>
+  <title>Barton Photography</title>
   
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
