--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="header-container">
     <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
     <div class="header-text">
-      <h1>Barton Photogaraphy</h1>
+      <h1>Barton Photography</h1>
       <p>Thomas R. Barton - Photographer based in Frankfurt</p>
     </div>
   </div>
