--- a/index.html
+++ b/index.html
@@ -4,23 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Barton Photography</title>
-  
   <link rel="icon" href="favicon.png" type="image/png">
   <style>
-    
     @font-face {
-  font-family: 'Open Sans';
-  src: url('fonts/open-sans-v40-latin-regular.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
+      font-family: 'Open Sans';
+      src: url('fonts/open-sans-v40-latin-regular.woff2') format('woff2');
+      font-weight: 400;
+      font-style: normal;
+    }
 
-@font-face {
-  font-family: 'Playfair Display';
-  src: url('fonts/playfair-display-v37-latin-regular.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-}
+    @font-face {
+      font-family: 'Playfair Display';
+      src: url('fonts/playfair-display-v37-latin-regular.woff2') format('woff2');
+      font-weight: 400;
+      font-style: normal;
+    }
 
     body {
       margin: 0;
@@ -37,8 +35,8 @@
     }
 
     .logo {
-      height: 90px; /* 50% kleiner */
-  max-width: 100%;
+      height: 90px;
+      max-width: 100%;
       margin-bottom: 1rem;
     }
 
@@ -79,41 +77,49 @@
     }
 
     .lightbox {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #f0f0f0;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem;
-}
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #f0f0f0;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+    }
 
-.lightbox.active {
-  display: flex;
-}
+    .lightbox.active {
+      display: flex;
+    }
 
-.lightbox img {
-  max-width: 90%;
-  max-height: 80%;
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  background: white;
-  padding: 0.5rem;
-}
+    .lightbox img {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      background: white;
+      padding: 0.5rem;
+    }
 
-.close-btn {
-  position: absolute;
-  top: 20px;
-  right: 60px; /* weiter rein, damit es nicht vom Scrollbalken verdeckt wird */
-  color: #333;
-  font-size: 30px;
-  cursor: pointer;
-  z-index: 1001;
-}
+    .close-btn {
+      position: absolute;
+      top: 20px;
+      right: 60px;
+      color: #333;
+      font-size: 30px;
+      cursor: pointer;
+      z-index: 1001;
+    }
 
+    @media (max-width: 600px) {
+      .close-btn {
+        right: 20px;
+        top: 15px;
+        font-size: 26px;
+      }
+    }
 
     footer {
       background-color: white;
@@ -133,39 +139,37 @@
     footer a:hover {
       text-decoration: underline;
     }
+
     .header-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.5rem;
-  flex-wrap: wrap;
-}
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
 
-.header-text {
-  text-align: left;
-}
+    .header-text {
+      text-align: left;
+    }
 
-@media (max-width: 600px) {
-  .header-container {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-
+    @media (max-width: 600px) {
+      .header-container {
+        flex-direction: column;
+        text-align: center;
+      }
+    }
   </style>
-
-
 </head>
 <body>
 
   <header>
     <div class="header-container">
-    <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
-    <div class="header-text">
-      <h1>Barton Photography</h1>
-      <p>Thomas R. Barton - Photographer based in Frankfurt</p>
+      <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
+      <div class="header-text">
+        <h1>Barton Photography</h1>
+        <p>Thomas R. Barton - Photographer based in Frankfurt</p>
+      </div>
     </div>
-  </div>
   </header>
 
   <main class="gallery">
@@ -187,7 +191,7 @@
 
   <footer>
     <p>
-      <a href="imprint.html">Imprint</a> 
+      <a href="imprint.html">Imprint</a>
       <a href="privacy.html">Privacy Policy</a>
     </p>
   </footer>
@@ -195,11 +199,14 @@
   <script>
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
+    const images = document.querySelectorAll('.gallery img');
+    let currentIndex = 0;
 
     function openLightbox(element) {
       const fullImage = element.getAttribute('data-full');
       lightboxImg.src = fullImage;
       lightbox.classList.add('active');
+      currentIndex = Array.from(images).indexOf(element);
     }
 
     function closeLightbox() {
@@ -212,11 +219,18 @@
     }
 
     function touchMove(e) {
-      let touchX = e.touches[0].clientX;
-      if (startX - touchX > 50) {
-        // swipe left
-      } else if (touchX - startX > 50) {
-        // swipe right
+      if (!startX) return;
+      const touchX = e.touches[0].clientX;
+      const diff = startX - touchX;
+
+      if (Math.abs(diff) > 50) {
+        if (diff > 0) {
+          currentIndex = (currentIndex + 1) % images.length;
+        } else {
+          currentIndex = (currentIndex - 1 + images.length) % images.length;
+        }
+        lightboxImg.src = images[currentIndex].getAttribute('data-full');
+        startX = 0;
       }
     }
 
@@ -224,6 +238,5 @@
       startX = 0;
     }
   </script>
-
 </body>
 </html>
