--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       padding: 2rem 1rem;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 1rem;
+      gap: 0.5rem; /* ← halbierter Abstand */
     }
 
     .gallery img {
