--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <img src="thumb_kaleidoscope-by-thomas-barton.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" onclick="openLightbox(this)" />
     <img src="thumb_skyline.jpg" data-full="lightbox_skyline.jpg" alt="Foto 4" onclick="openLightbox(this)" />
     <img src="thumb_IMG_1350.jpg" data-full="lightbox_IMG_1350.jpg" alt="Foto 5" onclick="openLightbox(this)" />
-    <img src="thumb_honsel_ffm" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" onclick="openLightbox(this)" />
+    <img src="thumb_honsel_ffm.jpg" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" onclick="openLightbox(this)" />
     <img src="thumb7.jpg" data-full="original7.jpg" alt="Foto 7" onclick="openLightbox(this)" />
     <img src="thumb8.jpg" data-full="original8.jpg" alt="Foto 8" onclick="openLightbox(this)" />
     <img src="thumb9.jpg" data-full="original9.jpg" alt="Foto 9" onclick="openLightbox(this)" />
