--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <img src="thumb_honsel_ffm.jpg" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" onclick="openLightbox(this)" />
     <img src="thumb_IMG_2995.jpg" data-full="lightbox_IMG_2995.jpg" alt="Foto 7" onclick="openLightbox(this)" />
     <img src="thumb_westend.jpg" data-full="lightbox_westend.jpg" alt="Foto 8" onclick="openLightbox(this)" />
-    <img src="thumb9.jpg" data-full="original9.jpg" alt="Foto 9" onclick="openLightbox(this)" />
+    <img src="thumb_gardasee.jpg" data-full="lightbox_gardasee.jpg" alt="Foto 9" onclick="openLightbox(this)" />
   </main>
 
   <div class="lightbox" id="lightbox" ontouchstart="touchStart(event)" ontouchmove="touchMove(event)" ontouchend="touchEnd()">
