--- a/index.html
+++ b/index.html
@@ -190,10 +190,11 @@
   </div>
 
   <footer>
-    <p>
-      <a href="imprint.html">Imprint</a>
-      <a href="privacy.html">Privacy Policy</a>
-    </p>
+    <p>&copy; 2025 Barton Photography</p>
+  <p>
+    <a href="imprint.html">Imprint</a> |
+    <a href="privacy.html">Privacy Policy</a>
+  </p>
   </footer>
 
   <script>
