--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <img src="thumb_skyline.jpg" data-full="lightbox_skyline.jpg" alt="Foto 4" onclick="openLightbox(this)" />
     <img src="thumb_IMG_1350.jpg" data-full="lightbox_IMG_1350.jpg" alt="Foto 5" onclick="openLightbox(this)" />
     <img src="thumb_honsel_ffm.jpg" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" onclick="openLightbox(this)" />
-    <img src="thumb_IMG_2995.jpg" data-full="lightbox_IMG_2995.jpg" alt="Foto 7" onclick="openLightbox(this)" />
+    <img src="thumb_IMG_2995.jpg" data-full="IMG_2995.jpg" alt="Foto 7" onclick="openLightbox(this)" />
     <img src="thumb_westend.jpg" data-full="lightbox_westend.JPEG" alt="Foto 8" onclick="openLightbox(this)" />
     <img src="thumb_gradasee.jpg" data-full="lightbox_gradasee.JPEG" alt="Foto 9" onclick="openLightbox(this)" />
   </main>
