--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     header {
       background-color: white;
       padding: 4rem 1rem 2rem;
-      text-align: center;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
@@ -38,6 +37,26 @@
       height: 90px;
       max-width: 100%;
       margin-bottom: 1rem;
+    }
+
+    .header-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+      text-align: center;
+    }
+
+    .header-text {
+      text-align: center;
+    }
+
+    @media (max-width: 600px) {
+      .header-container {
+        flex-direction: column;
+        text-align: center;
+      }
     }
 
     header h1 {
@@ -59,7 +78,7 @@
       padding: 2rem 1rem;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 0.5rem; /* ← halbierter Abstand */
+      gap: 0.5rem;
     }
 
     .gallery img {
@@ -101,29 +120,21 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
       background: white;
       padding: 0.5rem;
+      margin: auto;
     }
 
     .close-btn {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  color: #333;
-  font-size: 30px;
-  background: rgba(255, 255, 255, 0.8);
-  padding: 0.4rem 0.8rem;
-  border-radius: 8px;
-  z-index: 1100;
-  cursor: pointer;
-  line-height: 1;
-}
-
-
-    @media (max-width: 600px) {
-      .close-btn {
-        right: 20px;
-        top: 15px;
-        font-size: 26px;
-      }
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      color: #333;
+      font-size: 30px;
+      background: rgba(255, 255, 255, 0.8);
+      padding: 0.4rem 0.8rem;
+      border-radius: 8px;
+      z-index: 1100;
+      cursor: pointer;
+      line-height: 1;
     }
 
     footer {
@@ -143,25 +154,6 @@
 
     footer a:hover {
       text-decoration: underline;
-    }
-
-    .header-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
-
-    .header-text {
-      text-align: left;
-    }
-
-    @media (max-width: 600px) {
-      .header-container {
-        flex-direction: column;
-        text-align: center;
-      }
     }
   </style>
 </head>
@@ -189,81 +181,45 @@
     <img src="thumb_gradasee.jpg" data-full="lightbox_gradasee.JPEG" alt="Foto 9" onclick="openLightbox(this)" />
   </main>
 
- <div class="lightbox" id="lightbox">
-  <span class="close-btn" onclick="closeLightbox()">&times;</span>
-  <img
-    id="lightbox-img"
-    src=""
-    ontouchstart="touchStart(event)"
-    ontouchmove="touchMove(event)"
-    ontouchend="touchEnd()"
-  />
-</div>
-
+  <div class="lightbox" id="lightbox">
+    <span class="close-btn" onclick="closeLightbox()">&times;</span>
+    <img id="lightbox-img" src="" />
+  </div>
 
   <footer>
     <p>&copy; 2025 Barton Photography</p>
-  <p>
-    <a href="imprint.html">Imprint</a> |
-    <a href="privacy.html">Privacy Policy</a>
-  </p>
+    <p>
+      <a href="imprint.html">Imprint</a> |
+      <a href="privacy.html">Privacy Policy</a>
+    </p>
   </footer>
 
   <script>
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightbox-img');
-  const images = document.querySelectorAll('.gallery img');
-  let currentIndex = 0;
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = document.getElementById('lightbox-img');
+    const images = document.querySelectorAll('.gallery img');
+    let currentIndex = 0;
 
-  function openLightbox(element) {
-    const fullImage = element.getAttribute('data-full');
-    lightboxImg.src = fullImage;
-    lightbox.classList.add('active');
-    currentIndex = Array.from(images).indexOf(element);
-    history.pushState({ lightbox: true }, '', '#lightbox');
-  }
+    function openLightbox(element) {
+      const fullImage = element.getAttribute('data-full');
+      lightboxImg.src = fullImage;
+      lightbox.classList.add('active');
+      currentIndex = Array.from(images).indexOf(element);
+      history.pushState({ lightbox: true }, '', '#lightbox');
+    }
 
-  function closeLightbox() {
-    lightbox.classList.remove('active');
-    history.pushState({}, '', window.location.pathname);
-  }
+    function closeLightbox() {
+      lightbox.classList.remove('active');
+      history.pushState({}, '', window.location.pathname);
+    }
 
-  // Touchsteuerung für Wischen (links/rechts)
-  let startX = 0;
-
-  function touchStart(e) {
-    startX = e.touches[0].clientX;
-  }
-
-  function touchMove(e) {
-    if (!startX) return;
-    const touchX = e.touches[0].clientX;
-    const diff = startX - touchX;
-
-    if (Math.abs(diff) > 50) {
-      if (diff > 0) {
-        // Wisch nach links → nächstes Bild
-        currentIndex = (currentIndex + 1) % images.length;
-      } else {
-        // Wisch nach rechts → vorheriges Bild
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
+    // Browser-Zurück schließt Lightbox
+    window.addEventListener('popstate', () => {
+      if (window.location.hash !== '#lightbox') {
+        closeLightbox();
       }
-      lightboxImg.src = images[currentIndex].getAttribute('data-full');
-      startX = 0;
-    }
-  }
-
-  function touchEnd() {
-    startX = 0;
-  }
-
-  // Schließen der Lightbox bei „Zurück“-Taste im Browser
-  window.addEventListener('popstate', () => {
-    if (window.location.hash !== '#lightbox') {
-      closeLightbox();
-    }
-  });
-</script>
+    });
+  </script>
 
 </body>
 </html>
