--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
   </header>
 
   <main class="gallery">
-    <img src="thumb1.jpg" data-full="IMG_1106-Bearbeitet.jpg" alt="Foto 1" onclick="openLightbox(this)" />
-    <img src="thumb_IMG_3512.jpg" data-full="IMG_3512.jpg" alt="Foto 2" onclick="openLightbox(this)" />
-    <img src="thumb_kaleidoscope-by-thomas-barton.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" onclick="openLightbox(this)" />
-    <img src="thumb_skyline.jpg" data-full="lightbox_skyline.jpg" alt="Foto 4" onclick="openLightbox(this)" />
-    <img src="thumb_IMG_1350.jpg" data-full="lightbox_IMG_1350.jpg" alt="Foto 5" onclick="openLightbox(this)" />
-    <img src="thumb_honsel_ffm.jpg" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" onclick="openLightbox(this)" />
-    <img src="thumb_IMG_2995.jpg" data-full="IMG_2995.jpg" alt="Foto 7" onclick="openLightbox(this)" />
-    <img src="thumb_westend.jpg" data-full="lightbox_westend.JPEG" alt="Foto 8" onclick="openLightbox(this)" />
-    <img src="thumb_gradasee.jpg" data-full="lightbox_gradasee.JPEG" alt="Foto 9" onclick="openLightbox(this)" />
+    <img src="thumb1.jpg" data-full="IMG_1106-Bearbeitet.jpg" alt="Foto 1" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_IMG_3512.jpg" data-full="IMG_3512.jpg" alt="Foto 2" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_kaleidoscope-by-thomas-barton.jpg" data-full="kaleidoscope-by-thomas-barton.jpg" alt="Foto 3" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_skyline.jpg" data-full="lightbox_skyline.jpg" alt="Foto 4" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_IMG_1350.jpg" data-full="lightbox_IMG_1350.jpg" alt="Foto 5" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_honsel_ffm.jpg" data-full="lightbox_honsel_ffm.jpg" alt="Foto 6" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_IMG_2995.jpg" data-full="IMG_2995.jpg" alt="Foto 7" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_westend.jpg" data-full="lightbox_westend.JPEG" alt="Foto 8" loading="lazy" onclick="openLightbox(this)" />
+    <img src="thumb_gradasee.jpg" data-full="lightbox_gradasee.JPEG" alt="Foto 9" loading="lazy" onclick="openLightbox(this)" />
   </main>
 
   <div class="lightbox" id="lightbox">
