--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       font-style: normal;
     }
 
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
@@ -29,47 +33,39 @@
 
     header {
       background-color: white;
-      padding: 4rem 1rem 2rem;
+      padding: 2rem 1rem;
+      text-align: center;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
     .logo {
-      height: 90px;
+      height: 70px;
       max-width: 100%;
       margin-bottom: 1rem;
     }
 
     .header-container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 1rem;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 1.5rem;
-      flex-wrap: wrap;
+      gap: 1rem;
       text-align: center;
-    }
-
-    .header-text {
-      text-align: center;
-    }
-
-    @media (max-width: 600px) {
-      .header-container {
-        flex-direction: column;
-        text-align: center;
-      }
     }
 
     header h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 3rem;
+      font-size: 2.2rem;
       margin: 0;
       color: #111;
     }
 
     header p {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       color: #666;
-      margin-top: 0.5rem;
+      margin-top: 0.3rem;
     }
 
     .gallery {
@@ -77,7 +73,7 @@
       margin: 0 auto;
       padding: 2rem 1rem;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
       gap: 0.5rem;
     }
 
@@ -213,7 +209,6 @@
       history.pushState({}, '', window.location.pathname);
     }
 
-    // Browser-Zurück schließt Lightbox
     window.addEventListener('popstate', () => {
       if (window.location.hash !== '#lightbox') {
         closeLightbox();
