--- a/index.html
+++ b/index.html
@@ -39,43 +39,43 @@
     }
 
     .logo {
-  height: 90px;
-  max-width: 100%;
-}
+      height: 90px;
+      max-width: 100%;
+      margin-bottom: 1rem;
+    }
 
-.header-container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  text-align: center;
-}
+    .header-container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      text-align: center;
+    }
 
-.header-text {
-  max-width: 90px; /* Begrenzung auf Logo-Breite */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+    .header-text {
+      max-width: 300px;
+      width: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
-header h1 {
-  font-family: 'Playfair Display', serif;
-  font-size: 1.1rem;
-  margin: 0;
-  line-height: 1.2;
-  color: #111;
-}
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.6rem;
+      margin: 0;
+      color: #111;
+    }
 
-header p {
-  font-size: 0.9rem;
-  color: #666;
-  margin: 0.3rem 0 0;
-  line-height: 1.2;
-}
-
+    header p {
+      font-size: 1.1rem;
+      color: #666;
+      margin-top: 0.3rem;
+    }
 
     .gallery {
       max-width: 960px;
