--- a/index.html
+++ b/index.html
@@ -34,14 +34,7 @@
     header {
       background-color: white;
       padding: 2rem 1rem;
-      text-align: center;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
-    }
-
-    .logo {
-      height: 70px;
-      max-width: 100%;
-      margin-bottom: 1rem;
     }
 
     .header-container {
@@ -49,15 +42,24 @@
       margin: 0 auto;
       padding: 0 1rem;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      gap: 1rem;
-      text-align: center;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
+    }
+
+    .logo {
+      height: 90px;
+      max-width: 100%;
+    }
+
+    .header-text {
+      text-align: left;
     }
 
     header h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 2.2rem;
+      font-size: 2rem;
       margin: 0;
       color: #111;
     }
@@ -68,12 +70,31 @@
       margin-top: 0.3rem;
     }
 
+    @media (max-width: 600px) {
+      .header-container {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .header-text {
+        text-align: center;
+      }
+
+      header h1 {
+        font-size: 1.6rem;
+      }
+
+      header p {
+        font-size: 1rem;
+      }
+    }
+
     .gallery {
       max-width: 960px;
       margin: 0 auto;
       padding: 2rem 1rem;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 0.5rem;
     }
 
