--- a/imprint.html
+++ b/imprint.html
@@ -15,12 +15,14 @@
 
     header {
       background-color: white;
-      padding: 4rem 1rem 2rem;
-      text-align: center;
+      padding: 2rem 1rem;
       box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
     .header-container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 1rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -34,13 +36,38 @@
     }
 
     .header-text {
-      text-align: left;
+      max-width: 360px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.9rem;
+      margin: 0;
+      color: #111;
+    }
+
+    header p {
+      font-size: 1.05rem;
+      color: #666;
+      margin-top: 0.3rem;
     }
 
     @media (max-width: 600px) {
       .header-container {
         flex-direction: column;
-        text-align: center;
+      }
+
+      header h1 {
+        font-size: 1.6rem;
+      }
+
+      header p {
+        font-size: 0.95rem;
       }
     }
 
@@ -51,7 +78,7 @@
       line-height: 1.6;
     }
 
-    h1 {
+    h2 {
       font-family: 'Playfair Display', serif;
     }
 
@@ -81,8 +108,8 @@
     <div class="header-container">
       <img src="logo.png" alt="Logo Thomas R. Barton" class="logo" />
       <div class="header-text">
-        <h1>Thomas R. Barton</h1>
-        <p>Photographer based in Frankfurt</p>
+        <h1>Barton Photography</h1>
+        <p>Thomas R. Barton - Photographer based in Frankfurt</p>
       </div>
     </div>
   </header>
@@ -97,7 +124,7 @@
     </p>
 
     <p><strong>Contact:</strong><br />
-      E-Mail: <a href="mailto:info@thomas-barton.de">infoatthomas-barton.de</a>
+      E-Mail: <a href="mailto:info@thomas-barton.de">info@thomas-barton.de</a>
     </p>
 
     <p>All photos published on www.thomas-barton.de are protected by copyright. Any use by persons other than the copyright holder is strictly prohibited.</p>
@@ -106,7 +133,6 @@
   <footer>
     <p>
       <a href="index.html">Home</a>
-      
     </p>
   </footer>
 
