--- a/privacy.html
+++ b/privacy.html
@@ -36,12 +36,7 @@
     }
 
     .header-text {
-      max-width: 360px;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
+      text-align: left;
     }
 
     header h1 {
@@ -60,6 +55,11 @@
     @media (max-width: 600px) {
       .header-container {
         flex-direction: column;
+        text-align: center;
+      }
+
+      .header-text {
+        text-align: center;
       }
 
       header h1 {
@@ -121,7 +121,8 @@
     <p>No cookies are set, and no tracking services are used.</p>
 
     <p>If you have any questions regarding data protection, you can contact me at:<br>
-    <a href="mailto:info@thomas-barton.de">info@thomas-barton.de</a></p>
+    info(at)thomas-barton.de
+    </p>
   </main>
 
   <footer>
